[gd_scene load_steps=8 format=3 uid="uid://o3tgrepqvird"]

[ext_resource type="Script" path="res://Scripts/streamlayout/playerlist_spot.gd" id="1_8ysb5"]
[ext_resource type="FontFile" uid="uid://nkdnxwcrhjme" path="res://BebasNeue-Regular.ttf" id="1_r54gg"]
[ext_resource type="Texture2D" uid="uid://dxm6xad8gumek" path="res://Pics/Fighters/Bowser.png" id="2_r8l27"]
[ext_resource type="Texture2D" uid="uid://dreiyq7i030cm" path="res://Scripts/streamlayout/leader.png" id="3_788tg"]
[ext_resource type="Texture2D" uid="uid://d5asxwkrn0i" path="res://Scripts/streamlayout/jonne.png" id="4_ja5v7"]
[ext_resource type="Texture2D" uid="uid://bk617g1r6hqho" path="res://Scripts/streamlayout/firesheet.png" id="6_nh45t"]

[sub_resource type="Theme" id="Theme_fyks8"]
default_font = ExtResource("1_r54gg")
BoxContainer/constants/separation = 0

[node name="PlayerlistSpot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ysb5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PlayerlistSpot" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fyks8")

[node name="CenterContainer" type="CenterContainer" parent="PlayerlistSpot"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2

[node name="Char" type="TextureRect" parent="PlayerlistSpot/CenterContainer"]
texture_filter = 1
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("2_r8l27")
expand_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerlistSpot"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="Control" parent="PlayerlistSpot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="PlayerlistSpot/VBoxContainer/CenterContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.5
offset_top = -24.0
offset_right = 23.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Pelaaja
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crownholder" type="Control" parent="PlayerlistSpot/VBoxContainer/CenterContainer/Name"]
visible = false
layout_mode = 1
anchors_preset = 0

[node name="Leader" type="Sprite2D" parent="PlayerlistSpot/VBoxContainer/CenterContainer/Name/Crownholder"]
position = Vector2(-19, 6)
rotation = -0.359538
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_788tg")

[node name="Jonneholder" type="Control" parent="PlayerlistSpot/VBoxContainer/CenterContainer/Name"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="Jonne" type="Sprite2D" parent="PlayerlistSpot/VBoxContainer/CenterContainer/Name/Jonneholder"]
position = Vector2(17, 7)
rotation = 0.359538
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_ja5v7")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerlistSpot/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WinsLabel" type="Label" parent="PlayerlistSpot/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Wins"
horizontal_alignment = 2

[node name="Wins" type="Label" parent="PlayerlistSpot/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "0
"
horizontal_alignment = 1

[node name="PlayedLabel" type="Label" parent="PlayerlistSpot/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Played
"
horizontal_alignment = 2

[node name="Played" type="Label" parent="PlayerlistSpot/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "0
"
horizontal_alignment = 1

[node name="StreakLabel" type="Label" parent="PlayerlistSpot/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Streak"
horizontal_alignment = 2

[node name="Streak" type="Label" parent="PlayerlistSpot/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "0
"
horizontal_alignment = 1

[node name="FireHolder" type="Control" parent="PlayerlistSpot/VBoxContainer/HBoxContainer/Streak"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 7.0
offset_bottom = 7.0
grow_horizontal = 2

[node name="Firesheet" type="Sprite2D" parent="PlayerlistSpot/VBoxContainer/HBoxContainer/Streak/FireHolder"]
show_behind_parent = true
position = Vector2(0, -12)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_nh45t")
hframes = 25
